Added resume and links in contact section.

--- a/audiolife.html
+++ b/audiolife.html
@@ -10,7 +10,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+
         <link href='http://fonts.googleapis.com/css?family=Glegoo' rel='stylesheet' type='text/css'>
 
     
@@ -40,6 +42,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <main class="page">
 
         <h1>Audiolife: Product Design</h1>
 
@@ -91,6 +94,8 @@
                         </ul>
                 </div>
             </div>
+
+        </main>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
