--- a/griffith-observatory.html
+++ b/griffith-observatory.html
@@ -18,22 +18,17 @@
         <meta name="description" content="An interactive branding experience refresh for The Griffith Observatory in Los Angeles, including an identity refresh, website redesign, and mobile app.">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-         <link rel="icon" type="image/png" href="favicon.ico">
+         <link rel="icon" type="image/png" href="portfolio/favicon.ico">
 
-        <!-- Bootstrap -->
 
-        <!--
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.css" rel="stylesheet" type="text/css" />
-        -->
+        <link rel="stylesheet" href="css/style.css">
 
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-       
+         <!-- Normalize hide address bar for iOS and Android -->
+        <script src="./js/hideaddressbar.js"></script>
 
-        <!--
-        <link rel="stylesheet" href="css/normalize.css">
-        -->
+        <!-- Media query support for IE8 and under -->
+        <script src=".js/respond.min.js"></script>
 
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -45,7 +40,7 @@
         <header> 
                 <div class="nav-bar"> 
                   
-                    <a href="index.html"><img id="logo" src="images/logo.jpg"></a>
+                    <a href="index.html"><img id="logo" src="images/logo.svg"></a>
 
                     <nav>
                             <ul>
@@ -149,20 +144,5 @@
                 <p class="made">Made by Hand</p>
         </footer>
 
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
     </body>
 </html>
