--- a/audiolife.html
+++ b/audiolife.html
@@ -13,7 +13,6 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Glegoo' rel='stylesheet' type='text/css'>
 
-    
         <title>Audiolife: Product Design</title>
         <meta name="description" content="Product design walkthrough for a web-based tool that allows indie musicians to sell their music and merchandise through major online retailers.">
 
@@ -68,7 +67,7 @@
 
             <figure class="caption">
                 <img class="border" src="images/audiolife/wireframes.jpg">
-                <figcaption><i>Some of the hi-fidelity wireframes from the prototype I built in Axure RP after getting feedback on my initial sketches.</i></figcaption>
+                <figcaption><i>Some of the wireframes from the prototype I built in Axure RP after getting feedback on my initial sketches.</i></figcaption>
             </figure>
 
 
@@ -82,7 +81,7 @@
             <div id="role_container">
                 <h4 id="role">My Role</h4>
 
-                <p>As the sole designer on this product, it was my job to gather the requirements, develop the wireframes, build a prototype, provide the specifications to our developers and design the interface.</p>
+                <p>As the sole designer on this product, it was my job to gather the requirements, develop the wireframes, build a prototype, provide the specifications to our developers, and design the interface.</p>
 
             
                     <div class="list">
