--- a/griffith-observatory.html
+++ b/griffith-observatory.html
@@ -63,7 +63,7 @@
 
             <p>Like most projects, I began with research. Since I live in Los Angeles, I also spent some time visiting the Observatory to freshen my perspective on the experience and observe the other people there. It was interesting to see such a diverse audience in attendance. I also looked at other cultural institutions in Los Angeles and elsewhere to learn about their programming and identify some possible opportunities for the Observatory.</p>
 
-            <p>Given the fact that the Observatory didn't have an actual identifiable logo and there website was in dire need of a refresh, I decided to start there. I started with sketching some logo concepts and  picked three to render and explore further.</p>
+            <p>Given the fact that the Observatory didn't have an actual identifiable logo and their website was in dire need of a refresh, I decided to start there. I started with sketching some logo concepts and  picked three to render and explore further.</p>
 
             <img src="images/griffith-observatory/logos.jpg">
             
@@ -75,18 +75,18 @@
 
             <img src="images/griffith-observatory/website.jpg">
 
-            <p>Rather than stop there, I decided to take things a step further to explore ways that the Observatory can enhance the experience for visitors. Unlike other museums, the Observatory doesn't have rotating exhibits, nor the ability to really expand the building to add new ones. Whatever I did had to either work with their existing space and exhibits. I started with sketching some different concepts.</p>
+            <p>Rather than stop there, I decided to take things a step further to explore ways that the Observatory can enhance the experience for visitors. Unlike other museums, the Observatory doesn't have rotating exhibits, nor the ability to really expand the building to add new ones. Whatever I came up with had to work with their existing space and exhibits. I started with sketching some different concepts.</p>
 
             <figure class="caption">
                 <img class="border" src="images/griffith-observatory/sketches.jpg">
-                <figcaption><i>Some of my initial sketches exploring concepts such as a interactive exhibits, a mobile app, a picnic under the stars, social media photo contests, and sponsored workshops.</i></figcaption>
+                <figcaption><i>Some of my initial sketches exploring concepts such as interactive exhibits, a mobile app, a picnic under the stars, social media photo contests, and sponsored workshops.</i></figcaption>
             </figure>
 
-            <p>While I liked several of the ideas from the initial sketches, I continued to brainstorm by asking questions and talking to people to understand what was lacking from the experience. One constraint I had was that I wanted to do something that would be educational rather than purely entertainment since the mission of the Observatory is to "inspire everyone to observe, ponder, and understand the sky." Ultimately, I decided to create a mobile app that would guide visitors through a "scavenger hunt" throughout the premises. There would be various questions, based on the number of visits, which would require exploring the exhibits for answers. By completing the scavenger hunt, the user would be given a few reward options they can choose from to encourage further activities.</p>
+            <p>While I liked several of the ideas from the initial sketches, I continued to brainstorm by asking questions and talking to people to understand what was lacking from the experience. One constraint I had was that I wanted to do something that would be educational rather than purely entertainment, since the mission of the Observatory is to "inspire everyone to observe, ponder, and understand the sky." Ultimately, I decided to create a mobile app that would guide visitors through a "scavenger hunt" throughout the premises. There would be various questions, based on the number of visits, which would require exploring the premises for answers. By completing the scavenger hunt, the user would be given a few reward options they can choose from to encourage further activities.</p>
 
            <img src="images/griffith-observatory/mobile-app.jpg">
 
-            <p>Finally, since the Observatory doesn't have the ability to expand and is tied to their current location, I came up with a "Star Gazer" truck concept that would allow the Observatory to take the experience of observing the sky off site. The truck could go to different locations with an astronomer and telescope on board to allow people to get a glimpse the Universe. After all, it was Griffith J. Griffith that said, "If all mankind could look through that telescope, it would change the world!"</p>
+            <p>Finally, since the Observatory doesn't have the ability to expand and is tied to their current location, I came up with a "Star Gazer" truck concept that would allow the Observatory to take the experience of observing the sky off site. The truck could go to different locations with an astronomer and telescope on board to allow people to get a glimpse of the Universe. After all, it was Griffith J. Griffith that said, "If all mankind could look through that telescope, it would change the world!"</p>
 
            <img src="images/griffith-observatory/truck.jpg">
 
