--- a/hbogo.html
+++ b/hbogo.html
@@ -60,7 +60,7 @@
 
             <h1>HBOGO: UX Strategy & Redesign</h1>
 
-            <h3>What if HBOGO.com was built around a network of your friends allowing you to send and receive recommendations, and see each others reactions to a particular scene?</h3>
+            <h3>What if HBOGO.com was a more social experience?</h3>
 
             <p>The goal of this project was to develop a new UX strategy for HBOGO.com. The UX strategy was based on insights gathered from extensive research on industry trends, a competitive analysis, a heuristic analysis, and user interviews. These insights also informed the development of personas and principles to design against.</p>
 
@@ -71,19 +71,18 @@
                 <figcaption><i>Two personas developed based on initial research and user interviews.</i></figcaption>
             </figure>
             
-            <p>Each principle was presented with a sketch highlighting some of the new features. <a href="https://www.dropbox.com/s/tzcnofye51uahyt/anaK-hbogo-strategic-ux-presentation-v2.pdf?dl=0">CLICK HERE</a> to view the UX strategy presentation slides.</p>
-
-            
            <img class="border" src="images/hbogo/principles1.jpg">
 
            <img class="border" src="images/hbogo/principles2.jpg">
 
-           <img class="border" src="images/hbogo/principles3.jpg">
+           <figure class="caption">
+                <img class="border" src="images/hbogo/principles3.jpg">
+                <figcaption><i>Each principle was presented with a sketch highlighting some of the new features.</i></figcaption>
+            </figure>
 
+           <p><a href="https://www.dropbox.com/s/tzcnofye51uahyt/anaK-hbogo-strategic-ux-presentation-v2.pdf?dl=0">CLICK HERE</a> to view the UX strategy presentation slides.</p>
 
-            <p>The second phase of the project involved developing wireframes based on our strategy and final user experience. These wireframes showed the redesigned homepage, as well as integrated social features to enhance, not only the viewing experience, but the discovery of new content on HBOGO.</p>
-
-            <p><a href="https://www.dropbox.com/s/ald67dgn606xp3v/anaK-hbogo-wireframe-presentation.pdf?dl=0">CLICK HERE</a> to view the wireframe presentation slides.</p>
+            <p>The second phase of the project involved developing wireframes based on our strategy and final user experience. These wireframes showed the redesigned homepage, as well as integrated social features to enhance, not only the viewing experience, but the discovery of new content on HBOGO.com.</p>
 
            <img src="images/hbogo/wireframe1.jpg">
 
@@ -92,6 +91,8 @@
            <img src="images/hbogo/wireframe3.jpg">
 
            <img src="images/hbogo/wireframe4.jpg">
+
+           <p><a href="https://www.dropbox.com/s/ald67dgn606xp3v/anaK-hbogo-wireframe-presentation.pdf?dl=0">CLICK HERE</a> to view the wireframe presentation slides.</p>
 
             <div id="role_container">
                 <h4 id="role">My Role</h4>
