--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="hbogo.html">
                             <div class="overlay">
                                 <img src="images/home/hbogo.jpg">
-                                <p class="what-if">What if HBOGO.com was built around a network of your friends allowing you to send and receive recommendations, and see each others reactions to a particular scene?</p>
+                                <p class="what-if">What if HBOGO.com was a more social experience?</p>
                             </div>
                         </a>
                         <h2>HBOGO: UX Strategy & Redesign</h2>
