--- a/neighborhood-watch.html
+++ b/neighborhood-watch.html
@@ -60,7 +60,7 @@
 
             <h3>What if the Neighborhood Watch refreshed their identity to grow and engage with more participants?</h3>
 
-            <p>The goal of this project was to design a new identity and sign for the Neighborhood Watch Association. The primary sign that is currently used was designed in the ‘70s and felt a bit outdated. A redesign as well as an accompanying mobile app could not only increase participation in existing participants, but also engage new ones.</p>
+            <p>The goal of this project was to design a new identity and sign for the Neighborhood Watch Association. The original sign that is still used today was designed in the ‘70s and felt a bit outdated. A redesign, as well as an accompanying mobile app, could not only increase participation with existing members, but also create awareness to engage new ones.</p>
 
             <figure class="caption">
                 <img src="images/neighborhood-watch/sign.jpg">
