--- a/sprout.html
+++ b/sprout.html
@@ -77,7 +77,7 @@
 
             <figure class="caption">
                 <img class="border" src="images/sprout/sketches.jpg">
-                <figcaption>Some of the initial sketches exploring returning users checking on their gardens, a “seed locker” concept to store and manage different seeds you hope to plant, and the augmented reality feature.</figcaption>
+                <figcaption><i>Some of the initial sketches exploring returning users checking on their gardens, a “seed locker” concept to store and manage different seeds you hope to plant, and the augmented reality feature.</i></figcaption>
             </figure>
 
             <p>For my own user testing, I used an app called Prototyping on Paper. My main concern was the augmented reality feature, because I wanted to make sure this would make sense to users. Fortunately, I found that majority of the participants in the test immediately understood what was happening, without requiring any guidance.</p>
