--- a/waze.html
+++ b/waze.html
@@ -77,7 +77,7 @@
                 <figcaption><i>Some of the mobile and Watch app screens.</i></figcaption>
             </figure>            
             
-            <p>Ultimately, the most compelling and interesting concepts for me, centered around the idea of "driverless cities." Since the goal of the project was to focus on the well-being of users, I felt that this direction made the most sense since commuting and traffic are often some of the more frustrating aspects of our day to day lives, not to mention the health/environmental benefits of alternate modes of transportation. With this idea as my inspiration, I sketched out a user scenario that helped to inform my final concept and designs which can be viewed in the video below.</p>
+            <p>Since the goal of the project was to focus on the well-being of users, the concept of "driverless cities" made the most sense. In my research and in talking to people, I heard time and again that commuting and traffic are often some of the more frustrating aspects of our day to day lives, not to mention the health/environmental benefits of alternate modes of transportation. With this idea as my inspiration, I sketched out a user scenario that helped to inform my final concept and designs which can be viewed in the video below.</p>
 
             <div class="video">
                 <iframe src="https://player.vimeo.com/video/121314321?color=ff9933&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
