--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -68,7 +68,7 @@
 
             <img src="images/rps/game.jpg">
 
-            <p>Since I was still new to programming at this time, I found that the best way to approach the project is to break down each of the individual components and work on getting those to function separately; however, that only got me so far. It turns out that bringing everything together is a bit more complicated than simply piecing the individual programs together. I had a major breakthrough once I discovered that I can create multiple states in the program. For my purposes, I only needed two, one that would run during the actual gameplay and another that would determine the results and let you know if you won, lost or tied.</p>
+            <p>Since I was still new to programming at this time, I found that the best way to approach the project is to break down each of the individual components and work on getting those to function separately; however, that only got me so far. It turns out that bringing everything together is a bit more complicated than simply piecing the individual programs together. I had a major breakthrough once I discovered that I can create multiple states in the program. For my purposes, I only needed two, one that would run during the actual gameplay and another that would determine the results and let you know if you won, lost or tied. Once the wiring and programming were completed, I created a "shell" for the game to complete the prototype.</p>
 
             <p>In the spirit of open-source, I’ve made my program <a href="https://github.com/anakhachatrian/Rock-Paper-Scissors-with-Arduino">available on GitHub</a> and included a Fritzing diagram below for anyone interested in creating their own.</p>
 
